Updating pipeline: IMDB Updating SnowflakeV2Table: SnowflakeTable_IMDB Updating dataflow: dataflowTitleRatings

--- a/dataset/SnowflakeTable_IMDB.json
+++ b/dataset/SnowflakeTable_IMDB.json
@@ -9,6 +9,12 @@
 		"type": "SnowflakeV2Table",
 		"schema": [
 			{
+				"name": "TITLE_RATING_SK",
+				"type": "NUMBER",
+				"precision": 38,
+				"scale": 0
+			},
+			{
 				"name": "TCONST",
 				"type": "VARCHAR"
 			},
