Updating pipeline: IMDB Updating SnowflakeV2Table: SnowflakeTableNameBasics Updating dataflow: dataflowNameBasics

--- a/dataset/SnowflakeTableNameBasics.json
+++ b/dataset/SnowflakeTableNameBasics.json
@@ -9,6 +9,12 @@
 		"type": "SnowflakeV2Table",
 		"schema": [
 			{
+				"name": "NAME_BASICS_SK",
+				"type": "NUMBER",
+				"precision": 38,
+				"scale": 0
+			},
+			{
 				"name": "NCONST",
 				"type": "VARCHAR"
 			},
