--- a/dataset/SnowflakeTableTitlePrincipals.json
+++ b/dataset/SnowflakeTableTitlePrincipals.json
@@ -9,6 +9,12 @@
 		"type": "SnowflakeV2Table",
 		"schema": [
 			{
+				"name": "TITLE_PRINCIPALS_SK",
+				"type": "NUMBER",
+				"precision": 38,
+				"scale": 0
+			},
+			{
 				"name": "TCONST",
 				"type": "VARCHAR"
 			},
