Updating pipeline: IMDB Updating SnowflakeV2Table: SnowflakeTableTitleBasics Updating SnowflakeV2Table: SnowflakeTable_IMDB Updating dataflow: dataflowTitleRatings Updating dataflow: dataflowfactMovieDetails Updating dataflow: dataflowtitleBasics

--- a/dataset/SnowflakeTable_IMDB.json
+++ b/dataset/SnowflakeTable_IMDB.json
@@ -20,7 +20,9 @@
 			},
 			{
 				"name": "AVERAGERATING",
-				"type": "FLOAT"
+				"type": "FLOAT",
+				"precision": 38,
+				"scale": 0
 			},
 			{
 				"name": "NUMVOTES",
