--- a/dataset/SnowflakeFactEpisode.json
+++ b/dataset/SnowflakeFactEpisode.json
@@ -11,17 +11,23 @@
 			{
 				"name": "FACT_EPISODE_SK",
 				"type": "NUMBER",
-				"precision": 0,
-				"scale": 0
-			},
-			{
-				"name": "DATE_SK",
-				"type": "NUMBER",
-				"precision": 0,
+				"precision": 10,
 				"scale": 0
 			},
 			{
 				"name": "MOVIE_SK",
+				"type": "NUMBER",
+				"precision": 10,
+				"scale": 0
+			},
+			{
+				"name": "BRIDGE_DATE_SK",
+				"type": "NUMBER",
+				"precision": 10,
+				"scale": 0
+			},
+			{
+				"name": "DATE_SK",
 				"type": "NUMBER",
 				"precision": 10,
 				"scale": 0
